[package]
name = "raw-batch-prepare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsql = { version = "0.2.0", features = ["core"], default-features = false }
tracing = { version = "0.1.37", default-features = false }
tokio = { version = "1", features = ["full"] }
number_shortener = { git = "https://github.com/calebpitan/number-shortener" }
