[package]
name = "raw-batch-prepare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libsql = { version = "0.2.0", features = ["core"], default-features = false }
libsql = { version = "0.2.0" }
tracing = { version = "0.1.37", default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
number_shortener = { git = "https://github.com/calebpitan/number-shortener" }
dotenv = "0.15.0"

[[example]]
name = "prepare" # examples/prepare.rs

[[example]]
name = "prepare_remote" # examples/prepare_remote.ts

[[example]]
name = "batch" # examples/batch.rs

[[example]]
name = "batch_remote" # examples/batch_remote.rs

[[example]]
name = "stmts" # examples/stmts.rs

[[example]]
name = "stmts_remote" # examples/stmts_remote.rs
